--- a/lib/resume.html
+++ b/lib/resume.html
@@ -240,7 +240,7 @@
             sex: "男",
             age: 37,
             position: "12年iOS开发经验",
-            avatar: "https://github.com/HQ-2019/resume/raw/main/lib/image/avatar.jpg",
+            avatar: "image/avatar.jpg",
             phone: "18600211168", 
             weixin: "willn1987",
             email: "hq.da-520@163.com",
@@ -355,25 +355,25 @@
                 videos: [],
                 images: [
                     "image/IMG_21.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_12.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_14.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_15.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_16.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_17.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_18.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_19.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_20.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_1.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_2.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_3.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_4.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_5.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_6.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_7.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_8.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_9.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_10.WEBP",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_11.WEBP",
+                    "image/IMG_12.WEBP",
+                    "image/IMG_14.WEBP",
+                    "image/IMG_15.WEBP",
+                    "image/IMG_16.WEBP",
+                    "image/IMG_17.WEBP",
+                    "image/IMG_18.WEBP",
+                    "image/IMG_19.WEBP",
+                    "image/IMG_20.WEBP",
+                    "image/IMG_1.WEBP",
+                    "image/IMG_2.WEBP",
+                    "image/IMG_3.WEBP",
+                    "image/IMG_4.WEBP",
+                    "image/IMG_5.WEBP",
+                    "image/IMG_6.WEBP",
+                    "image/IMG_7.WEBP",
+                    "image/IMG_8.WEBP",
+                    "image/IMG_9.WEBP",
+                    "image/IMG_10.WEBP",
+                    "image/IMG_11.WEBP",
                 ]
             },
             {
@@ -391,22 +391,22 @@
                     "混合跨平台Flutter技术，开发公共业务如圈子模块功能等。"
                 ],
                 videos: [
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/RPReplay_44_1.MP4",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/RPReplay_44_2.MP4",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/RPReplay_44_3.MP4",
+                    "image/RPReplay_44_1.MP4",
+                    "image/RPReplay_44_2.MP4",
+                    "image/RPReplay_44_3.MP4",
                 ],
                 images: [
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_1.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_2.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_3.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_4.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_5.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_6.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_7.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_8.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_9.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_10.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_44_11.PNG",
+                    "image/IMG_44_1.PNG",
+                    "image/IMG_44_2.PNG",
+                    "image/IMG_44_3.PNG",
+                    "image/IMG_44_4.PNG",
+                    "image/IMG_44_5.PNG",
+                    "image/IMG_44_6.PNG",
+                    "image/IMG_44_7.PNG",
+                    "image/IMG_44_8.PNG",
+                    "image/IMG_44_9.PNG",
+                    "image/IMG_44_10.PNG",
+                    "image/IMG_44_11.PNG",
                 ]
             },
             {
@@ -420,25 +420,25 @@
                     "调研Flutter跨平台技术并在早鸟、电商业务中使用。保持对iOS前沿技术的调研和应用，如苹果的SharePlay、SwiftUI、Widget等技术。"
                 ],
                 videos: [
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/RPReplay_55_1.MP4",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/RPReplay_55_2.MP4",
+                    "image/RPReplay_55_1.MP4",
+                    "image/RPReplay_55_2.MP4",
                 ],
                 images: [
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_1.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_2.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_3.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_4.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_5.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_6.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_7.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_8.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_9.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_10.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_11.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_12.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_13.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_14.PNG",
-                    "https://github.com/HQ-2019/resume/raw/main/lib/image/IMG_55_15.PNG",
+                    "image/IMG_55_1.PNG",
+                    "image/IMG_55_2.PNG",
+                    "image/IMG_55_3.PNG",
+                    "image/IMG_55_4.PNG",
+                    "image/IMG_55_5.PNG",
+                    "image/IMG_55_6.PNG",
+                    "image/IMG_55_7.PNG",
+                    "image/IMG_55_8.PNG",
+                    "image/IMG_55_9.PNG",
+                    "image/IMG_55_10.PNG",
+                    "image/IMG_55_11.PNG",
+                    "image/IMG_55_12.PNG",
+                    "image/IMG_55_13.PNG",
+                    "image/IMG_55_14.PNG",
+                    "image/IMG_55_15.PNG",
                 ]
             },
             {
