--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
             background-color: #ccc;
         }
 
-         .project-image-item:hover {
+        .project-image-item:hover {
             transform: scale(1.05);
-         } 
+        } 
 
         .role-list {
             list-style-type: disc;
@@ -172,57 +172,24 @@
             background-color: #ccc;
         }
 
-        /* 视频缩略图样式 */
-        .project-video-item::-webkit-media-controls {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-panel {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-play-button {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-timeline {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-current-time-display {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-time-remaining-display {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-mute-button {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-volume-slider {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-fullscreen-button {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-rewind-button {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-return-to-realtime-button {
-            display: none !important;
-        }
-
-        .project-video-item::-webkit-media-controls-toggle-closed-captions-button {
-            display: none !important;
-        }
-
         .project-video-item:hover {
             transform: scale(1.05);
+        }
+
+        /* 视频缩略图样式 */
+        .project-video-item::-webkit-media-controls,
+        .project-video-item::-webkit-media-controls-panel,
+        .project-video-item::-webkit-media-controls-play-button,
+        .project-video-item::-webkit-media-controls-timeline,
+        .project-video-item::-webkit-media-controls-current-time-display,
+        .project-video-item::-webkit-media-controls-time-remaining-display,
+        .project-video-item::-webkit-media-controls-mute-button,
+        .project-video-item::-webkit-media-controls-volume-slider,
+        .project-video-item::-webkit-media-controls-fullscreen-button,
+        .project-video-item::-webkit-media-controls-rewind-button,
+        .project-video-item::-webkit-media-controls-return-to-realtime-button,
+        .project-video-item::-webkit-media-controls-toggle-closed-captions-button {
+            display: none !important;
         }
 
         /* 视频模态框样式 */
